<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <include layout="@layout/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_oldPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:hint="@string/et_oldPwd"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_newPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@drawable/shape"
            android:hint="@string/et_newPwd"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_newPwdAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@drawable/shape"
            android:hint="@string/et_newPwdAgain"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tv_pwdAlert"
            style="@style/AlertFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:singleLine="false" />

        <Button
            android:id="@+id/bt_chang_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_style_green"
            android:onClick="modify"
            android:text="@string/bt_change_pwd" />
    </LinearLayout>

</RelativeLayout>